syntax = "proto3";

option csharp_namespace = "grpcServerStreamingIletisimServer";

package serverstreamingmessage;

service ServerStreamingMessage {
  rpc SendServerStreamingMessage (ServerStreamingMessageRequest) returns (stream ServerStreamingMessageResponse);
}

message ServerStreamingMessageRequest {
  string name = 1;
  string message = 2;
}

message ServerStreamingMessageResponse {
  string message = 1;
}
